<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>.at.ac.htlhl.nucleij</groupId>
    <artifactId>nucleij</artifactId>
    <version>1.0</version>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-forms -->
        <dependency>
            <groupId>com.jgoodies</groupId>
            <artifactId>jgoodies-forms</artifactId>
            <version>1.8.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-binding -->
        <dependency>
            <groupId>com.jgoodies</groupId>
            <artifactId>jgoodies-binding</artifactId>
            <version>2.13.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-looks -->
        <dependency>
            <groupId>com.jgoodies</groupId>
            <artifactId>jgoodies-looks</artifactId>
            <version>2.7.0</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.jdesktop/appframework -->
        <dependency>
            <groupId>org.jdesktop</groupId>
            <artifactId>appframework</artifactId>
            <version>1.0.3</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/gov.nih.imagej/imagej -->
        <dependency>
            <groupId>gov.nih.imagej</groupId>
            <artifactId>imagej</artifactId>
            <version>1.47</version>
        </dependency>


        <!-- https://mvnrepository.com/artifact/com.miglayout/miglayout -->
        <!-- WIH: MigLayout is needed by the library "TaskDialog" -->
        <dependency>
            <groupId>com.miglayout</groupId>
            <artifactId>miglayout</artifactId>
            <version>3.7.4</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
        <!-- WIH: Convert a Java object to / from JSON -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.8.4</version>
        </dependency>
        <dependency>
            <groupId>.at.ac.htlhl.nucleij</groupId>
            <artifactId>nucleij</artifactId>
            <version>1.0</version>
        </dependency>


    </dependencies>

</project>